<resources>
    <string name="app_name">青歆</string>

    <string name="to_expand_hint">更多</string>
    <string name="to_shrink_hint">收起</string>

    <!--错误信息-->
    <string name="e1000">用户未登陆</string>
    <string name="e1001">登陆失败，手机号验证码不匹配</string>
    <string name="e1002">登陆失败，该用户已被禁用</string>
    <string name="e1003">登陆失败，手机号和验证码不能为空</string>
    <string name="e1005">Token过期</string>
    <string name="e1010">一分钟之后才能获取新的验证码</string>
    <string name="e1011">手机号格式错误</string>
    <string name="e1012">验证码错误</string>
    <string name="e1020">未开启签到功能</string>
    <string name="e1021">今天已经签到过了</string>
    <string name="e1030">类型参数错误</string>
    <string name="e1040">参数不全</string>
    <string name="e1050">参数不全</string>
    <string name="e1051">余额不足</string>
    <string name="e1100">wiki不存在</string>
    <string name="e1110">日记不存在</string>
    <string name="e1111">无权操作该日记</string>
    <string name="e1200">已经预约过该产品</string>


    <!--首页-->
    <string name="home_search_text_hint">大家在搜:自体脂肪填充</string>
    <string name="share_only_by_new_person">歆人专享</string>
    <string name="diary">日记</string>
    <string name="goddess_diary">女神日记</string>
    <string name="local_strict_selection">本地严选</string>
    <string name="encyclopedia_of_medical_beauty">医美百科</string>
    <string name="strict_selection_famous_doctor_institute">严选名医机构</string>
    <string name="exclusive_service">专属服务</string>
    <string name="more">更多</string>

    <!--选择城市-->
    <string name="choose_city">选择城市</string>

    <!--女神日记-->
    <string name="plus_collection">+收藏</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="related_product">相关产品</string>
    <string name="rmb_icon">￥</string>
    <string name="publish_from">发布于:</string>
    <string name="book_times">次预约</string>
    <string name="gap">-</string>
    <string name="wechat_friends">微信好友</string>
    <string name="wechat_circle">朋友圈</string>
    <string name="qq_friends">QQ好友</string>
    <string name="qq_zone">QQ空间</string>
    <string name="xinlang_weibo">新浪微博</string>
    <string name="copy_link">复制链接</string>
    <string name="cancel">取消</string>
    <string name="collect_ok">收藏成功</string>
    <string name="sure_publish">确定发布</string>
    <string name="sure_modify">确定修改</string>
    <string name="publish_diary">发布日记</string>
    <string name="item_category">项目类别</string>
    <string name="diary_publish_hint">记录下你的变美心得吧~</string>
    <string name="choose_from_the_list">从目录中选取</string>
    <string name="cancel_collect_ok">已取消收藏</string>
    <string name="agency">机构</string>
    <string name="doctor">医生</string>
    <string name="xin_buy">歆购</string>

    <!--歆人专享-->
    <string name="vip_unique_price">歆人独享专价</string>
    <string name="safe_guarrentee">安全保证</string>
    <string name="vip_unique_escort">歆人专享陪护</string>
    <string name="product_detail">产品详情</string>
    <string name="collect">收藏</string>
    <string name="order_now">立即预约</string>
    <string name="medical_beauty">医美百科</string>
    <string name="order_count">次预约</string>
    <string name="already_booked">已预约</string>

    <!--医美百科-->
    <string name="characteristic">特点</string>
    <string name="attention">注意</string>
    <string name="expand_all">展开全部</string>
    <string name="program_intro">项目介绍</string>
    <string name="tips_before_operation">术前锦囊</string>
    <string name="tips_after_operation">术后锦囊</string>

    <!--福利社-->
    <string name="welfare_home">福利社</string>
    <string name="my_qingxin_coin">我的青歆币</string>
    <string name="my_qingxin_coin_balance">我的青歆币总额</string>
    <string name="save_and_save">再攒攒</string>
    <string name="withdrawals_balance">可提现青歆币总额</string>
    <string name="confirm_withdrawal">确定提现</string>
    <string name="qingxin_coin_rule">青歆币规则</string>
    <string name="apply_withdrawals">申请提现</string>
    <string name="sign_in_every_day">每日签到</string>
    <string name="share_dairy">分享日记</string>
    <string name="invite_new_user">邀请歆人</string>
    <string name="recommend_user">推荐用户</string>
    <string name="click_to_sign">点击签到</string>
    <string name="already_signed">已签到</string>
    <string name="release_dairy">发布日记</string>
    <string name="click_to_invite">点击邀请</string>
    <string name="click_to_recommend">点击推荐</string>
    <string name="qingxin_coin_detail">青歆币明细</string>
    <string name="warm_remind">温馨提示</string>
    <string name="can_not_withdrawals_remind_message">抱歉，您的青歆币总额未达到10000，还不能提现，加油，再攒攒</string>
    <string name="apply_withdrawals_finish_remind_message">您的申请已收到，稍后青歆客服会与您联系，将现金发放与您</string>
    <string name="no_get_coin_rule">未获取到配置信息请退出重试</string>
    <string name="plus_300">+300</string>
    <string name="plus_1000">+1000</string>

    <!--推荐用户-->
    <string name="star_tag">*</string>
    <string name="user_name">用户姓名</string>
    <string name="please_input_username">请输入用户姓名</string>
    <string name="cellphone_num">手机号码</string>
    <string name="please_input_cellphone_num">请输入手机号码</string>
    <string name="intention_program">意向项目</string>
    <string name="please_input_intention_program">请输入意向项目</string>
    <string name="intention_hospital">意向医院</string>
    <string name="please_input_intention_hospital">请输入意向医院</string>
    <string name="remark_gap">备&#160;&#160;&#160;&#8201;&#160;&#160;&#160;&#8201;注</string>
    <string name="please_input_remark_gap">请输入备注</string>
    <string name="ensure_submit">确定提交</string>
    <string name="recommend_success">推荐成功</string>

    <!--我的-->
    <string name="mine">我的</string>
    <string name="my_wish_list">我的心愿单</string>
    <string name="contact_us">联系我们</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="mine_product">#产品</string>
    <string name="mine_diary">#日记</string>
    <string name="appointment_count">预约 · 0</string>
    <string name="diary_count">日记 · 0</string>
    <string name="collection_count">收藏 · 0</string>
    <string name="appointment_count_prefix">预约 · </string>
    <string name="diary_count_prefix">日记 · </string>
    <string name="collection_count_prefix">收藏 · </string>
    <string name="publish_your_first_diary">发布你的第一篇日记</string>
    <string name="you_have_not_collected_this">你还没有收藏该内容</string>
    <string name="go_to_scan_product">去浏览产品</string>
    <string name="login">登陆</string>
    <string name="hint_login_input_phone">请输入手机号</string>
    <string name="hint_login_input_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="history_record">历史记录</string>
    <string name="clear_history">清除历史记录</string>
    <string name="net_error">网络错误,点击屏幕重新加载</string>
    <string name="UMENG_ENABLED">true</string>

    <!--个人信息-->
    <string name="my_information">个人信息</string>
    <string name="modify_head">修改头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="region">地区</string>
    <string name="cellphone">手机</string>
    <string name="save">保存</string>
    <string name="setting">设置</string>
    <string name="about_qingxin">关于青歆</string>
    <string name="check_update">检查更新</string>
    <string name="logout">退出登录</string>
<<<<<<< HEAD
    <string name="logout_success">退出成功</string>
    <string name="right_owner">©2018 版权所有\n四川青歆科技有限公司</string>
=======
    <string name="right_owner">©2018 版权所有四川青歆科技有限公司</string>
>>>>>>> 4886623c0731c0ae65434ede95082288b9e6932e
    <string name="about_us">关于我们</string>
    <string name="please_choose">请选择</string>
    <string name="complete">完成</string>
    <string name="confirm">确定</string>
</resources>
