<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@mipmap/welfare_top_banner"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="37dp"
            android:text="@string/my_qingxin_coin"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/qingxinCoinRuleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="32.5dp"
            android:drawablePadding="4dp"
            android:drawableRight="@mipmap/qingxincoin_rule_logo"
            android:padding="5dp"
            android:text="@string/qingxin_coin_rule"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/qingxinCoinAmountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="36dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/applyWithDrawalsTv"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/white_button"
            android:gravity="center"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:text="@string/apply_withdrawals"
            android:textColor="@color/text_color_blue"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView
            android:id="@+id/myQingXinCoinTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:drawableLeft="@mipmap/sign_in_every_day_logo"
            android:drawablePadding="9dp"
            android:drawableStart="@mipmap/sign_in_every_day_logo"
            android:text="@string/my_qingxin_coin"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signInCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="185dp"
            android:layout_marginStart="185dp"
            android:text="@string/plus_300"
            android:textColor="@color/text_color_blue"
            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/clickToSignTv"
            android:layout_width="64dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/blue_button"
            android:gravity="center"
            android:text="@string/click_to_sign"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />

        <!--<TextView
            android:id="@+id/alreadySignedTv"
            android:layout_width="64dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginEnd="86dp"
            android:layout_marginRight="86dp"
            android:background="@drawable/gray_button"
            android:gravity="center"
            android:text="@string/already_signed"
            android:textColor="@color/text_color_origin_price"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />-->
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView
            android:id="@+id/shareDairyTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:drawableLeft="@mipmap/share_dairy_logo"
            android:drawablePadding="9dp"
            android:drawableStart="@mipmap/share_dairy_logo"
            android:text="@string/share_dairy"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shareCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="185dp"
            android:layout_marginStart="185dp"
            android:text="@string/plus_1000"
            android:textColor="@color/text_color_blue"
            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/releaseDairyTv"
            android:layout_width="64dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/blue_button"
            android:gravity="center"
            android:text="@string/release_dairy"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/inviteNewUserTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:drawableLeft="@mipmap/invite_new_user_logo"
            android:drawablePadding="9dp"
            android:drawableStart="@mipmap/invite_new_user_logo"
            android:text="@string/invite_new_user"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inviteCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="185dp"
            android:layout_marginStart="185dp"
            android:text="@string/plus_300"
            android:textColor="@color/text_color_blue"
            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/clickToInviteTv"
            android:layout_width="64dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/blue_button"
            android:gravity="center"
            android:text="@string/click_to_invite"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView
            android:id="@+id/recommendUserTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:drawableLeft="@mipmap/recommend_new_user_logo"
            android:drawablePadding="9dp"
            android:drawableStart="@mipmap/recommend_new_user_logo"
            android:text="@string/recommend_user"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recommendCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="185dp"
            android:layout_marginStart="185dp"
            android:text="@string/plus_300"
            android:textColor="@color/text_color_blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clickToRecommendTv"
            android:layout_width="64dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/blue_button"
            android:gravity="center"
            android:text="@string/click_to_recommend"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/gap_color_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:text="@string/qingxin_coin_detail"
        android:textColor="@color/text_color_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />
</LinearLayout>