<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.vlee78.android.vl.VLTitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/gap_color_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/star_tag"
                    android:textColor="@color/text_color_blue"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:gravity="center_vertical"
                    android:text="@string/user_name"
                    android:textColor="@color/text_color_hint"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/userNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:background="@null"
                    android:textColorHint="@color/c_line_color"
                    android:hint="@string/please_input_username"
                    android:paddingEnd="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/star_tag"
                    android:textColor="@color/text_color_blue"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:gravity="center_vertical"
                    android:text="@string/cellphone_num"
                    android:textColor="@color/text_color_hint"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/cellphoneNumEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/please_input_cellphone_num"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:paddingEnd="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/c_line_color"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/star_tag"
                    android:textColor="@color/text_color_blue"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:gravity="center_vertical"
                    android:text="@string/intention_program"
                    android:textColor="@color/text_color_hint"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/intentionProgramEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/please_input_intention_program"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:paddingEnd="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/c_line_color"
                    android:textSize="14sp"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/star_tag"
                    android:textColor="@color/text_color_blue"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:gravity="center_vertical"
                    android:text="@string/intention_hospital"
                    android:textColor="@color/text_color_hint"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/intentionHospitalEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/please_input_intention_hospital"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:paddingEnd="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/c_line_color"
                    android:textSize="14sp"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/star_tag"
                    android:textColor="@color/text_color_blue"
                    android:textSize="14sp"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="13dp"
                    android:paddingTop="13dp"
                    android:text="@string/remark_gap"
                    android:textColor="@color/text_color_hint"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/remarkEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/please_input_remark_gap"
                    android:background="@null"
                    android:lineSpacingExtra="4dp"
                    android:paddingBottom="13dp"
                    android:paddingEnd="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:paddingTop="13dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/c_line_color"
                    android:textSize="14sp"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gap_color_gray">

                <TextView
                    android:id="@+id/ensureSubmitTv"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="100dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/recommend_user_btn_unfill_bg"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/ensure_submit"
                    android:enabled="false"
                    android:textSize="16sp"
                    />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
